--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@ HR_pontaj_Camelia.xlsm
 HR_tool_add_table.py
 Project Plan.txt
 To do.txt
-image.png
+PTO_mapping.png
 desktop.ini
 Project_files
 Employees.xlsx
 Calculation_table.xlsx
 id numbers+ date of joining.xlsx
 PTO.xlsx
+hr-automation-main
